<resources>
    <string name="app_name">UNews</string>
    <string name="facebook_app_id">1145420255578410</string>
    <string name="fb_login_protocol_scheme">fb1145420255578410</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (minimum 6 characters)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login_email">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="email">Email</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="auth_failed_short">Authentication failed.</string>
    <string name="name_hint">Name (optional)</string>
    <string name="logo">logo</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="society">Society</string>
    <string name="entertainment">Entertainment</string>
    <string name="sports">Sports</string>
    <string name="science">Science</string>
    <string name="politics">Politics</string>
    <string name="health">Health</string>
    <string name="weather">Weather</string>
    <string name="food">Food</string>
    <string name="travel">Travel</string>
    <string name="finance">Finance</string>
    <string name="save">Save</string>
    <string name="hi">Hi</string>
    <string name="cancel">Cancel</string>


    <string name="topics_topics">Topics</string>
    <string name="topics_feed">Feed</string>
    <string name="topics_local">Local</string>

    <string name="logged_in">Logged In</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="error">Error: </string>
    <string name="cancelled">Cancelled</string>
    <string name="not_now">Not now</string>
    <string name="tech">Tech</string>
    <string name="world">World</string>
    <string name="choose_fav_cat">\nPlease choose favorite categories.</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="service_icon">Service Icon</string>
    <string name="headline_icon">Headline Icon</string>
    <string name="registering_user">Registering User...</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="could_not_regist">Could not register</string>
    <string name="topics">Topics</string>
    <string name="feed">Feed</string>
    <string name="local">Local</string>
</resources>
