<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.ua.cm.project.unews.LoginActivity">


    <ImageView
        android:layout_width="@dimen/logo_w_h"
        android:layout_height="@dimen/logo_w_h"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/main_logo" />

    <Button
        android:id="@+id/login_email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:onClick="onClick"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/email" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_google_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:onClick="onClick"
        android:paddingBottom="15dp"
        android:paddingTop="15dp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_facebook_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp" />

    <Button
        android:id="@+id/login_register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:onClick="onClick"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:text="@string/action_register" />

    <TextView
        android:id="@+id/not_now_hyperlink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:linksClickable="true"
        android:onClick="onClick"
        android:text="@string/not_now"
        android:textAlignment="center" />
</LinearLayout>
